# poe2-p2p

./: .gitignore  POE2-P2P.spec  README.md  build_exe.bat  build_installer.bat  poe2-p2p.md  pyproject.toml  recommendations.md  requirements.txt  run_app.bat  run_app.py  run_cli.bat  setup_windows.ps1  validate_windows.bat  validate_windows.ps1
.github/workflows/: windows-installer.yml
installer/: POE2-P2P.iss
poe2_p2p/: __init__.py  alerts.py  app.py  calculator.py  calibration.py  candidates.py  capture.py  config.py  dashboard.py  diagnostics.py  economic_strategies.py  exporter.py  global_hotkeys.py  icon_cache.py  logging_utils.py  models.py  ocr.py  parser.py  poe_ninja.py  presets.py  ranking.py  sample_data.py  settings.py  storage.py  updater.py  validation.py  valuation.py
poe2_p2p/ui/: overlay.py
scripts/: build_exe.ps1  build_installer.ps1  generate_app_icon.py
tests/: test_core.py
