[project]
name = "poe2-p2p"
version = "0.1.0"
description = "Lightweight POE2 currency exchange arbitrage overlay prototype"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "Pillow>=10.0",
  "mss>=9.0",
  "opencv-python>=4.8",
  "pytesseract>=0.3",
  "requests>=2.31",
  "keyboard>=0.13.5",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.8",
]

[project.scripts]
poe2-p2p = "poe2_p2p.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
